--- a/templates/manage_systems.html
+++ b/templates/manage_systems.html
@@ -29,14 +29,14 @@
     <h2 class="mt-5">Existing Systems</h2>
     <ul class="list-group">
         {% for system in systems %}
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-            <div>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="flex-grow-1 w-100">
                 <strong>{{ system['device_number'] }}</strong> - {{ system['description'] }} <br> {{ system['plc_ip'] }} <br> {{ system['subnet'] }}
             </div>
-            <div>
-                <button class="btn btn-sm btn-warning" onclick="editSystem({{ system['id'] }}, '{{ system['device_number'] }}', '{{ system['description'] }}', '{{ system['plc_ip'] }}', '{{ system['subnet'] }}')">Edit</button>
-                <form method="post" action="{{ url_for('delete_system', id=system['id']) }}" style="display:inline;">
-                    <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+            <div class="d-flex flex-column align-items-start" style="width: 100px;">
+                <button class="btn btn-sm btn-warning mb-2" style="width: 100%;" onclick="editSystem({{ system['id'] }}, '{{ system['device_number'] }}', '{{ system['description'] }}', '{{ system['plc_ip'] }}', '{{ system['subnet'] }}')">Edit</button>
+                <form method="post" action="{{ url_for('delete_system', id=system['id']) }}" style="width: 100%;">
+                    <button type="submit" class="btn btn-sm btn-danger" style="width: 100%;">Delete</button>
                 </form>
             </div>
         </li>
