--- a/templates/manage_tags.html
+++ b/templates/manage_tags.html
@@ -21,16 +21,16 @@
     <h2 class="mt-5">Existing Tag Sets</h2>
     <ul class="list-group">
         {% for tag_set in tag_sets %}
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-            <div>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="flex-grow-1 w-100">
                 <strong>{{ tag_set['tag_set_name'] }}</strong>
                 <pre>{{ tag_set['tags'] }}</pre>
             </div>
-            <div>
+            <div class="d-flex flex-column align-items-start" style="width: 100px;">
                 <!-- Safely pass the tag set data -->
-                <button class="btn btn-sm btn-warning" onclick="editTagSet({{ tag_set['id'] }}, '{{ tag_set['tag_set_name'] }}', `{{ tag_set['tags'] }}`)">Edit</button>
-                <form method="post" action="{{ url_for('delete_tag_set', id=tag_set['id']) }}" style="display:inline;">
-                    <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                <button class="btn btn-sm btn-warning mb-2" style="width: 100%;" onclick="editTagSet({{ tag_set['id'] }}, '{{ tag_set['tag_set_name'] }}', `{{ tag_set['tags'] }}`)">Edit</button>
+                <form method="post" action="{{ url_for('delete_tag_set', id=tag_set['id']) }}" style="width: 100%;">
+                    <button type="submit" class="btn btn-sm btn-danger" style="width: 100%;">Delete</button>
                 </form>
             </div>
         </li>
