--- a/templates/trend_control.html
+++ b/templates/trend_control.html
@@ -27,7 +27,7 @@
         </div>
         <div class="mb-3">
             <label for="cycles" class="form-label">Cycles:</label>
-            <input type="number" class="form-control" id="cycles" name="cycles" value="{{ trend['cycles'] if trend else 999999}}" required>
+            <input type="number" class="form-control" id="cycles" name="cycles" value="{{ trend['cycles'] if trend else 864000}}" required>
         </div>
         <div class="mb-3">
             <label for="cycle_time" class="form-label">Cycle Time (ms):</label>
@@ -36,7 +36,7 @@
         </div>
         <div class="mb-3">
             <label for="buffer_size" class="form-label">Buffer Size:</label>
-            <input type="number" class="form-control" id="buffer_size" name="buffer_size" value="{{ trend['buffer_size'] if trend else 10 }}" required>
+            <input type="number" class="form-control" id="buffer_size" name="buffer_size" value="{{ trend['buffer_size'] if trend else 100 }}" required>
             <small id="buffer_duration" class="form-text text-muted"></small> <!-- This line will display the "Save to file every x seconds" -->
         </div>
         <div class="mb-3">
@@ -50,18 +50,17 @@
     <h2 class="mt-5">Existing Trends</h2>
     <ul class="list-group">
         {% for trend in trends %}
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-            <div>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="flex-grow-1 w-100">
                 <strong>{{ trend['device_number'] }}</strong> - {{ trend['description'] }} 
                 <br> IP: {{ trend['plc_ip'] }} / Subnet: {{ trend['subnet'] }}
                 <br> Cycles: {{ trend['cycles'] }} / Cycle Time: {{ trend['cycle_time'] }} ms / Buffer Size: {{ trend['buffer_size'] }}
                 <br> Tags: {{ trend['tags'] }}
-                
             </div>
-            <div>
-                <a href="{{ url_for('edit_trend', id=trend['id']) }}" class="btn btn-sm btn-warning">Edit</a>
-                <form method="post" action="{{ url_for('delete_trend', id=trend['id']) }}" style="display:inline;">
-                    <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+            <div class="d-flex flex-column align-items-start" style="width: 100px;">
+                <a href="{{ url_for('edit_trend', id=trend['id']) }}" class="btn btn-sm btn-warning mb-2" style="width: 100%;">Edit</a>
+                <form method="post" action="{{ url_for('delete_trend', id=trend['id']) }}" style="width: 100%;">
+                    <button type="submit" class="btn btn-sm btn-danger" style="width: 100%;">Delete</button>
                 </form>
             </div>
         </li>
