--- a/templates/edit_trend.html
+++ b/templates/edit_trend.html
@@ -7,36 +7,29 @@
     <h1>Trend Control</h1>
     
     <!-- Trend Data Entry Form -->
-    <form method="post" action="{{ url_for('trend_control') }}">
+    <form method="post" action="{{ url_for('edit_trend', id=trend['id']) }}">
+    <!-- <form method="post" action="{{ url_for('trend_control') }}"> -->
         <input type="hidden" name="trend_id" value="{{ trend['id'] if trend }}">
         <div class="mb-3">
-            <label for="system_id" class="form-label">Select System:</label>
-            <select class="form-select" id="system_id" name="system_id" required>
-                {% for system in systems %}
-                <option value="{{ system['id'] }}" {% if trend and trend['system_id'] == system['id'] %}selected{% endif %}>{{ system['device_number'] }} - {{ system['description'] }}</option>
-                {% endfor %}
-            </select>
+            <label for="device_number" class="form-label">Description:</label>
+            <input type="text" name="device_number" class="form-control" id="description" value="{{ trend['device_number'] if trend}}">
         </div>
         <div class="mb-3">
-            <label for="tag_set_id" class="form-label">Select Tag Set:</label>
-            <select class="form-select" id="tag_set_id" name="tag_set_id" required>
-                {% for tag_set in tag_sets %}
-                <option value="{{ tag_set['id'] }}" {% if trend and trend['tag_set_id'] == tag_set['id'] %}selected{% endif %}>{{ tag_set['tag_set_name'] }}</option>
-                {% endfor %}
-            </select>
+            <label for="tags" class="form-label">Tags (one per line):</label>
+            <textarea id="tags" name="tags" class="form-control" rows="5" required>{{ trend['tags'] if trend}}</textarea>
         </div>
         <div class="mb-3">
             <label for="cycles" class="form-label">Cycles:</label>
-            <input type="number" class="form-control" id="cycles" name="cycles" value="{{ trend['cycles'] if trend else 864000}}" required>
+            <input type="number" class="form-control" id="cycles" name="cycles" value="{{ trend['cycles'] if trend}}" required>
         </div>
         <div class="mb-3">
             <label for="cycle_time" class="form-label">Cycle Time (ms):</label>
-            <input type="number" class="form-control" id="cycle_time" name="cycle_time" step="0.1" value="{{ trend['cycle_time'] if trend else 0.1 }}" required>
+            <input type="number" class="form-control" id="cycle_time" name="cycle_time" step="0.1" value="{{ trend['cycle_time'] if trend}}" required>
             <small id="trend_duration" class="form-text text-muted"></small> <!-- This line will display the calculated duration -->
         </div>
         <div class="mb-3">
             <label for="buffer_size" class="form-label">Buffer Size:</label>
-            <input type="number" class="form-control" id="buffer_size" name="buffer_size" value="{{ trend['buffer_size'] if trend else 100 }}" required>
+            <input type="number" class="form-control" id="buffer_size" name="buffer_size" value="{{ trend['buffer_size'] if trend}}" required>
             <small id="buffer_duration" class="form-text text-muted"></small> <!-- This line will display the "Save to file every x seconds" -->
         </div>
         <div class="mb-3">
