--- a/templates/manage_systems.html
+++ b/templates/manage_systems.html
@@ -23,7 +23,7 @@
             <label for="subnet" class="form-label">Subnet:</label>
             <input type="text" class="form-control" id="subnet" name="subnet">
         </div>
-        <button type="submit" class="btn btn-primary">Save System</button>
+        <button type="submit" class="btn btn-primary w-100">Save System</button>
     </form>
 
     <h2 class="mt-5">Existing Systems</h2>
